--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(120deg, #f74663 0%, #e3e3e3 100%);
-  color: white;
+  background-image: url("images/bg.png");
+  /* linear-gradient(120deg, #f74663 0%, #e3e3e3 100%); */
+  color: rgb(109, 108, 108);
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
@@ -25,17 +26,17 @@ form button {
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
-  background: white;
+  background: rgb(109, 108, 108);
 }
 form button {
   color: #c60021;
-  background: #f7fffe;
+  background: rgb(109, 108, 108);
   cursor: pointer;
   transition: all 0.3s ease;
 }
 form button:hover {
   background: #c60021;
-  color: white;
+  color: rgb(109, 108, 108);
 }
 .todo-container {
   display: flex;
@@ -50,7 +51,7 @@ form button:hover {
 
 .todo {
   margin: 0.5rem;
-  background: white;
+  background: rgb(109, 108, 108);
   font-size: 1.5rem;
   color: black;
   display: flex;
@@ -68,7 +69,7 @@ form button:hover {
 .trash-btn,
 .complete-btn {
   background: #c60021;
-  color: white;
+  color: rgb(109, 108, 108);
   border: none;
   padding: 1rem;
   cursor: pointer;
@@ -115,6 +116,7 @@ select {
   overflow: hidden;
 }
 select {
+  background: rgb(151, 150, 150);
   color: #c60021;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
