--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("images/bg.png");
-  /* linear-gradient(120deg, #f74663 0%, #e3e3e3 100%); */
-  color: rgb(109, 108, 108);
+  background-image: linear-gradient(120deg, #f86464 0%, #facbcb 100%);
+  color: white;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
@@ -26,17 +25,17 @@ form button {
   padding: 0.5rem;
   font-size: 2rem;
   border: none;
-  background: rgb(109, 108, 108);
+  background: white;
 }
 form button {
-  color: #c60021;
-  background: rgb(109, 108, 108);
+  color: #f86464;
+  background: #f7fffe;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 form button:hover {
-  background: #c60021;
-  color: rgb(109, 108, 108);
+  background: #f86464;
+  color: white;
 }
 .todo-container {
   display: flex;
@@ -51,7 +50,7 @@ form button:hover {
 
 .todo {
   margin: 0.5rem;
-  background: rgb(109, 108, 108);
+  background: white;
   font-size: 1.5rem;
   color: black;
   display: flex;
@@ -68,8 +67,8 @@ form button:hover {
 
 .trash-btn,
 .complete-btn {
-  background: #c60021;
-  color: rgb(109, 108, 108);
+  background: #f86464;
+  color: white;
   border: none;
   padding: 1rem;
   cursor: pointer;
@@ -116,8 +115,7 @@ select {
   overflow: hidden;
 }
 select {
-  background: rgb(151, 150, 150);
-  color: #c60021;
+  color: #f86464;
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   width: 12rem;
@@ -129,7 +127,7 @@ select {
   top: 0;
   right: 0;
   padding: 1rem;
-  background: #c60021;
+  background: #f86464;
   cursor: pointer;
   pointer-events: none;
 }
